# xn-ptts

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: maturin-pub.yml  pages.yml  rust-ci.yml
pocket-tts/: Cargo.toml
pocket-tts-pyo3/: Cargo.toml  pyproject.toml
pocket-tts-pyo3/src/: lib.rs
pocket-tts-wasm/: Cargo.toml
pocket-tts/examples/: audio_helpers.rs  quantize.rs
pocket-tts/src/: conditioners.rs  conv.rs  flow_lm.rs  layer_scale.rs  lib.rs  mimi.rs  resample.rs  rope.rs  seanet.rs  tts_model.rs
ptts-wasm/: Cargo.toml  Makefile  README.md
ptts-wasm/src/: lib.rs
ptts-wasm/www/: idle_tts_wasm.js  idle_tts_wasm_bg.wasm  idle_worker.js  index.html  kokoro_ort_worker.js  ptts_wasm.js  ptts_wasm_bg.wasm  supertonic_ort_worker.js  worker.js
ptts-ws-server/: Cargo.toml
ptts-ws-server/src/: encoder.rs  handler.rs  main.rs  model.rs  protocol.rs  wav.rs
ptts/examples/: pocket_tts.rs
ptts/src/: dummy_quantizer.rs  mlp.rs  transformer.rs  wav.rs
