[workspace]
members = [
  "ptts",
  "ptts-pyo3",
  "ptts-wasm",
]
resolver = "3"

[workspace.package]
version = "0.1.11"
description = "Pocket TTS inference and serving using xn"
repository = "https://github.com/LaurentMazare/xn-ptts"
keywords = ["pytorch", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"

[workspace.dependencies]
ptts = { path = "ptts", version = "0.1.11" }

anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
half = { version = "2.7.1", features = ["num-traits"] }
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }
js-sys = "0.3"
kaudio = "0.2.1"
libc = "0.2"
libm = "0.2"
memmap2 = "0.9"
num-traits = "0.2.19"
num_cpus = "1.17.0"
paste = "1"
rand = { version = "0.9.0", default-features = false }
rand_distr = "0.5.0"
rayon = "1.11.0"
rubato = "0.15.0"
safetensors = "0.7"
sentencepiece = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.3", features = ["all"] }
thiserror = "2.0.17"
tokenizers = "0.21"
tracing = "0.1.44"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wasm-bindgen = "0.2"
xn = "0.1.11" 

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false
