[package]
name = "ptts-pyo3"
version.workspace = true
edition = "2024"
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "ptts"
crate-type = ["cdylib"]

[dependencies]
xn = { workspace = true }
ptts = { workspace = true }
hf-hub = { workspace = true }
numpy = "0.28"
pyo3 = { version = "0.28", features = ["extension-module"] }
rand = { workspace = true, features = ["std_rng"] }
rand_distr = { workspace = true }
sentencepiece = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
cuda = ["xn/cuda", "ptts/cuda"]
accelerate = ["xn/accelerate", "ptts/accelerate"]
