[package]
name = "ptts-wasm"
version.workspace = true
edition = "2024"
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ptts = { workspace = true }
xn = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
rand = { workspace = true, default-features = false, features = ["std_rng"] }
rand_distr = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
