[package]
name = "ptts"
version.workspace = true
edition = "2024"
autoexamples = false
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
xn = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
rand_distr = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sentencepiece = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
half = { workspace = true }
hf-hub = { workspace = true }
rubato = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
symphonia = { workspace = true }
tracing-chrome = { workspace = true }

[features]
default = []
cuda = ["xn/cuda"]
accelerate = ["xn/accelerate"]
sp = ["dep:sentencepiece"]

[[example]]
name = "pocket_tts"
required-features = ["sp"]

[[example]]
name = "quantize"
