[package]
name = "ptts-ws-server"
version.workspace = true
edition = "2024"
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ptts = { workspace = true }
xn = { workspace = true }
hf-hub = { workspace = true }
byteorder = { workspace = true }
sentencepiece = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
rand_distr = { workspace = true }
rubato = { workspace = true }
kaudio = { workspace = true }
half = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
bytemuck = { workspace = true }
futures-util = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

[features]
default = []
cuda = ["xn/cuda", "ptts/cuda"]
accelerate = ["xn/accelerate", "ptts/accelerate"]
